<resources>
    <string name="app_name">PraAssessmentRafli</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_nama">Muhammad Rafli Naufal</string>
    <string name="tv_nim">6706180044</string>
    <string name="tv_kelas">D3 RPLA 42 - 02</string>
    <string name="bt_pp">Persegi Panjang</string>
    <string name="bt_segitiga">Segitiga</string>
    <string name="hint_panjang">Panjang</string>
    <string name="hint_lebar">Lebar</string>
    <string name="bt_hitungPP">Hitung</string>
    <string name="bt_share">Share</string>
    <string name="hint_alas">Alas</string>
    <string name="hint_tinggi">Tinggi</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
</resources>
