<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PersegiPanjangFragment">
    <Button
            android:text="@string/bt_hitungPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btHitungPP"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etLebarPP"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLuasPP"
            app:layout_constraintTop_toBottomOf="@+id/btHitungPP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="32dp"
            tools:text="Luas = " android:textSize="30sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvKelilingPP" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLuasPP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:textSize="30sp"
            tools:text="Keliling = "/>
    <Button
            android:text="@string/bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btShare" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvKelilingPP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etPanjangPP" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:hint="@string/hint_panjang"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etLebarPP" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etPanjangPP" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:hint="@string/hint_lebar"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>